# BLADE

./: .gitignore  AGENT_OPERATING_MODE.md  BLADE_CONTEXT.md  BRIDGE.md  CHANGELOG.md  CLAUDE.md  DOCS.md  HANDOFF.md  README.md  VISION.md  blade.sh  eslint.config.js  ghost_overlay.html  hud.html  index.html  overlay.html  package-lock.json  package.json  playwright.config.ts  quickask.html  suggestions.md  tailwind.config.js  vite.config.ts
.claude/: settings.json  settings.local.json
.claude/commands/: blade-uat.md
.claude/hooks/: blade-operating-mode.sh  blade-preflight.sh  uat-evidence-required.sh
.github/scripts/: prepare-tauri-release-config.mjs
.github/workflows/: build.yml  release.yml
.planning/: HANDOFF-TO-MAC.md  MILESTONES.md  PROJECT.md  RECOVERY_LOG.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  SYNTHESIS-2026-05-13.md  V2-AUTONOMOUS-HANDOFF.md  agent-native-audit.md  config.json  decisions.md  migration-ledger.md  surprises.md  v2.0-onboarding-spec.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
backend/: claude.py  main.py  start.sh
docs/: AGI doc-.md  HIVE_PLAN.md  README.md
eslint-rules/: no-raw-tauri.js
scripts/: _render-audit-md.mjs  _synthesize-audit.mjs  audit-contrast.mjs  claude_managed_agent_runner.mjs  gen-icons.py  patch-wiring-audit-v22.mjs  run-intel-benchmark.sh  seed-migration-ledger.mjs  verify-a11y-pass-2.mjs  verify-aria-icon-buttons.mjs  verify-chat-rgba.sh  verify-css-token-names.mjs  verify-ecosystem-guardrail.mjs  verify-emit-policy.mjs  verify-empty-state-coverage.sh  verify-empty-states-copy.mjs  verify-entries.mjs  verify-eval.sh  verify-feature-cluster-routes.sh  verify-feature-reachability.mjs  verify-ghost-no-cursor.sh  verify-hormone.sh  verify-html-entries.mjs  verify-hud-chip-count.sh  verify-inference.sh  verify-intelligence.sh  verify-migration-ledger.mjs  verify-motion-tokens.sh  verify-no-raw-tauri.sh  verify-orb-rgba.sh  verify-organism.sh  verify-phase5-rust-surface.sh  verify-phase6-rust-surface.sh  verify-phase7-rust-surface.sh  verify-phase8-rust-surface.sh  verify-providers-capability.mjs  verify-safety.sh  verify-scan-event-compat.mjs  verify-scan-no-egress.mjs  verify-scan-no-write.mjs  (+6 more)
src/: App.tsx  ghost_overlay.tsx  hud.tsx  index.css  main.tsx  overlay.tsx  quickask.tsx  types.ts
src-tauri/: .gitignore  Cargo.toml  canonical_models.json  tauri.conf.json  tauri.release.conf.template.json
src-tauri/capabilities/: default.json
src-tauri/data/: canonical_models.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 202605_deprecate_vector_indexes.sql  202605_session_schema.sql
src-tauri/src/: accountability.rs  action_tags.rs  active_inference.rs  activity_monitor.rs  agent_commands.rs  agent_factory.rs  ai_delegate.rs  ambient.rs  audio_timeline.rs  audit.rs  authority_engine.rs  auto_fix.rs  auto_reply.rs  automation.rs  autonomous_research.rs  autoskills.rs  background_agent.rs  body_registry.rs  brain.rs  brain_planner.rs  browser_agent.rs  browser_native.rs  capability_probe.rs  cardiovascular.rs  causal_graph.rs  character.rs  clipboard.rs  cmd_util.rs  code_sandbox.rs  commands.rs  computer_use.rs  config.rs  consent.rs  consequence.rs  context.rs  context_engine.rs  cron.rs  crypto.rs  db.rs  db_commands.rs  (+130 more)
src-tauri/src/agents/: executor.rs  mod.rs  planner.rs  queue.rs  thought_tree.rs
src-tauri/src/decomposition/: executor.rs  mod.rs  planner.rs  summary.rs
src-tauri/src/deep_scan/: enrichment.rs  leads.rs  mod.rs  profile.rs  queue.rs  rhythm.rs
src-tauri/src/deep_scan/scanners/: ai_sessions.rs  bookmarks.rs  fs_repos.rs  git_remotes.rs  ide_workspaces.rs  mod.rs  mru.rs  shell_history.rs  which_sweep.rs
src-tauri/src/evals/: active_inference_eval.rs  adversarial_eval.rs  ambiguous_intent_eval.rs  capability_gap_eval.rs  capability_gap_stress_eval.rs  harness.rs  hormone_eval.rs  hybrid_search_eval.rs  intelligence_eval.rs  kg_integrity_eval.rs  mod.rs  organism_eval.rs  real_embedding_eval.rs  safety_eval.rs  typed_memory_eval.rs  vitality_eval.rs
src-tauri/src/intelligence/: anchor_parser.rs  capability_registry.rs  mod.rs  pagerank.rs  repo_map.rs  symbol_graph.rs  tree_sitter_parser.rs
src-tauri/src/oauth/: github.rs  gmail.rs  mod.rs  slack.rs
src-tauri/src/onboarding/: contradictions.rs  hunt.rs  mod.rs  platform_paths.md  pre_scan.rs  synthesis.rs
src-tauri/src/plugins/: loader.rs  mod.rs  registry.rs
src-tauri/src/providers/: anthropic.rs  canonical.rs  gemini.rs  goose_traits.rs  groq.rs  hermes_format.rs  mod.rs  ollama.rs  openai.rs  streaming_accumulator.rs
src-tauri/src/resilience/: fallback.rs  mod.rs  stuck.rs
src-tauri/src/session/: list.rs  log.rs  mod.rs  resume.rs
src-tauri/src/skills/: activate.rs  consent.rs  export.rs  lifecycle.rs  loader.rs  mod.rs  parser.rs  pending.rs  resolver.rs  types.rs  validator.rs
src-tauri/src/skills_md/: dispatch.rs  install.rs  loader.rs  manifest.rs  mod.rs  seed.rs
src-tauri/src/tentacles/: calendar_tentacle.rs  cloud_costs.rs  discord_deep.rs  email_deep.rs  filesystem_watch.rs  github_deep.rs  github_outbound.rs  gmail_outbound.rs  heads.rs  linear_jira.rs  log_monitor.rs  mod.rs  slack_deep.rs  slack_outbound.rs  terminal_watch.rs
src-tauri/tests/: context_management_integration.rs  forge_e2e_integration.rs  loop_engine_integration.rs  memory_simplified_integration.rs  oauth_github_integration.rs  oauth_gmail_integration.rs  oauth_slack_integration.rs  presence_integration.rs  provider_canonical_integration.rs  session_manager_integration.rs  skills_md_integration.rs  telos_integration.rs
src.bak/: App.tsx  index.css  overlay.tsx  quickask.tsx
src/lib/: ai.ts  (+15 more)
(+1457 files in other folders)
