[package]
name = "blade"
version = "0.1.0"
description = "Blade - Personal AI"
authors = ["Arnav Maurya"]
edition = "2021"

[lib]
name = "blade_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
dirs = "6"
arboard = "3"
chrono = "0.4"
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
cpal = "0.15"
hound = "3.5"
xcap = "0.0.14"
base64 = "0.22"
image = "0.25"

[profile.release]
lto = true
codegen-units = 1
strip = true
