[package]
name = "blade"
version = "0.4.0"
description = "Blade - Personal AI"
authors = ["Arnav Maurya"]
edition = "2021"

[lib]
name = "blade_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
# tauri-plugin-sql removed — db.rs handles SQLite via rusqlite directly
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
dirs = "6"
arboard = "3"
chrono = "0.4"
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
rusqlite = { version = "0.39", features = ["bundled"] }
cpal = "0.15"
hound = "3.5"
xcap = "0.9.4"
base64 = "0.22"
image = "0.25"
enigo = "0.2"
fastembed = "5"
uuid = { version = "1", features = ["v4"] }
aes-gcm = "0.10"
rand = "0.8"
tokio-tungstenite = "0.24"
urlencoding = "2.1"
glob = "0.3"

[target.'cfg(windows)'.dependencies]
uiautomation = "0.24.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
