[package]
name = "blade"
version = "1.2.1"
description = "Blade - Personal AI"
authors = ["Arnav Maurya"]
edition = "2021"

[lib]
name = "blade_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
# tauri-plugin-sql removed — db.rs handles SQLite via rusqlite directly
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
dirs = "6"
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
rusqlite = { version = "0.39", features = ["bundled"] }
csv = "1"
cpal = "0.15"
hound = "3.5"
xcap = "0.9.4"
base64 = "0.22"
image = "0.25"
enigo = "0.2"
fastembed = "5"
uuid = { version = "1", features = ["v4"] }
aes-gcm = "0.10"
rand = "0.8"
tokio-tungstenite = "0.24"
urlencoding = "2.1"
glob = "0.3"
regex = "1"
zip = "2"
whisper-rs = { version = "0.13", optional = true }
walkdir = "2"
once_cell = "1"
# Plan 34-02 — RES-01 NoProgress + RepeatedActionObservation use sha256 of
# safe_slice'd text/args for deterministic dedup hashing.
sha2 = "0.10"
# Plan 34-02 — SESS-01 session IDs. ULID is lex-sortable (48-bit ms timestamp +
# 80-bit random), Crockford base32 (26 chars, no I/L/O/U), filesystem-friendly.
ulid = "1"
# Plan 34-02 — SESS-01 atomic JSONL append. fs2 provides cross-platform
# advisory flock (LOCK_EX) for events that exceed the POSIX PIPE_BUF=4096
# atomicity guarantee.
fs2 = "0.4"

# Phase 36 Plan 36-01 — Context Intelligence (INTEL-01 + INTEL-02).
# tree-sitter family powers per-language symbol extraction (TS/JS, Rust, Python)
# for the symbol graph (INTEL-01); petgraph backs the personalized PageRank
# computation over that graph (INTEL-02). All deps are pre-staged in 36-01;
# Plans 36-02 and 36-03 wire concrete usage.
tree-sitter = "0.22"
tree-sitter-typescript = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-python = "0.21"
petgraph = "0.6"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"

[features]
default = []
local-whisper = ["whisper-rs"]
# Phase 22 Plan 22-05 (v1.3) — exposes tool_forge::forge_tool_from_fixture
# and tool_forge::youtube_transcript_fixture for the verify-voyager-loop
# gate (Plan 22-07) to drive the Voyager loop deterministically without
# an LLM call. Tests get the same surface unconditionally via #[cfg(test)].
voyager-fixture = []

[target.'cfg(windows)'.dependencies]
uiautomation = "0.24.4"
winreg = "0.52"

[profile.release]
lto = true
codegen-units = 1
strip = true
